--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,16 @@
+<div class="p-3 mb-2">
+    <div class="container">
+        <div class="row">
+            <div class="justify-content-lg-center">
+                <div class="d-flex align-items-center flex-column bd-highlight mb-3 fs-1">Welcome to FullStack Workouts
+                </div>
+                <div class="d-flex align-items-center flex-column bd-highlight mb-3 fs-2">The workout planner/tracker
+                    app</div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="container mt-5">
 <div class="row mt-5">
     <div class="col-sm-6">
