--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -34,10 +34,10 @@
                 <i class="fas fa-exclamation-circle"></i>
                 <small>Error message</small>
             </div> --}}
-            <button class="singUpBtn" type="submit"><i class='bx bxs-lock'></i>Create Account</button>
+            <button class="singUpBtn" id="singUpBtn" type="submit"><i class='bx bxs-lock'></i>Create Account</button>
         </form>
     
     </div>
 </div>
 
-    <script src="http://localhost:3001/javascript/signup.js"></script> 
+    <script src="/javascript/signup.js"></script> 
